--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 //var masterUrl ='https://preprod.daylight.themoocagency.com/quizMaster'
 // var imgUrl ='https://preprod.daylight-back.themoocagency.com/daylightQuizEditor/uploadFileImg/'
 // var quizID="1"
-//var postOrPre="Pre"
+// var postOrPre="Pre"
 
 //var x
 // var TotalBindQuest=0
@@ -22,6 +22,16 @@ var chronoButton = false;
 var pauseButton = false;
 var setShuffle = false;
 var TotalTime;
+
+// function getUrlVars() {
+//     var vars = {};
+//     var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+//         vars[key] = value;
+//     });
+//     return vars;
+// }
+
+// var quizID = getUrlVars()["quizID"];
 
 $(document).ready(function() {
   //code here
@@ -237,7 +247,7 @@ $(document).ready(function() {
                      <div class="col-sm-16" >
                         <h4 >{{quiz.activeQuestion+1 + ". " + quiz.dataService.quizQuestions[quiz.activeQuestion].text}}</h4>
                         <center>
-                           <img onload="this.style.display = 'block'"class="questImg" id="photoQ{{quiz.dataService.quizQuestions[quiz.activeQuestion].question_id_true}}" ng-src="{{quiz.dataService.quizQuestions[quiz.activeQuestion].questionImgUrl}}" on-src-error index=="angular.element(this).scope().quiz.dataService.quizQuestions[quiz.activeQuestion].questionImgUrl = false" onerror="this.style.display = 'none'">
+                           <img onload="this.style.display = 'block'"class="questImg" id="photoQ{{quiz.dataService.quizQuestions[quiz.activeQuestion].question_id_true}}" ng-src="{{quiz.dataService.quizQuestions[quiz.activeQuestion].questionImgUrl}}" src="{{quiz.dataService.quizQuestions[quiz.activeQuestion].questionImgUrl}}" on-src-error index="angular.element(this).scope().quiz.dataService.quizQuestions[quiz.activeQuestion].questionImgUrl = false" onerror="this.style.display = 'none'">
                         </center>
                         <div class="question-answer" ng-class="{'image-selected': $index === quiz.dataService.quizQuestions[quiz.activeQuestion].selected}" ng-click="quiz.selectAnswer($index)"> </div>
                         <div class="row" ng-if="quiz.dataService.quizQuestions[quiz.activeQuestion].type === 'text'">
