--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ $(document).ready(function() {
                   </div>
                </div>
             </div>
-            <button class="btn btn-primary btn-lg" ng-click="results.reset()">Retourner au menu
+            <button style="display:none" class="btn btn-primary btn-lg" ng-click="results.reset()">Retourner au menu
             </button> 
          </div>
       </div>
